# techpeeps-blog

./: .env.example  .gitignore  Makefile  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  state.json  style-guide.md  tsconfig.json
.github/workflows/: ci.yml  newsletter.yml
functions/api/: subscribe.js
pipeline/: clip.py  compare_models.py  fetch_playlist.py  generate.py  make_style_guide.py  mark_published.py  patch_meta.py  send_newsletter.py  teaser.py  transcribe.py  verify_post.py
pipeline/lib/: __init__.py  assemblyai.py  config.py  llm.py  prompts.py  state.py
public/: _headers
public/clips/: because-you-are-excellent-princess-on-confidence-community-and-building-a-career.webm  building-many-of-herself-chioma-asor-on-engineering-management-space-gaming-and.webm  example-profile.webm  from-home-economics-to-figma-lovelace-fierce-on-the-real-work-behind-product-des.webm  go-for-gold-raymonds-winding-road-from-pilot-dreams-to-data-consulting.webm  ibrahim-abdullah-finding-his-footing-at-microsoft.webm  its-never-a-5-minute-call-jackleen-nnely-on-the-real-work-of-project-management.webm  mubarak-awal-taught-himself-to-code-on-youtube.webm  one-month-two-offers-and-a-nigerian-guy-on-twitter.webm  otima-nyarinchi-building-tech-that-sees-people-of-color.webm  (+3 more)
transcripts/: KAxjaa4-HYY.json  LVNVUsWAEiQ.json  TokBUkAQCkg.json  ZSqKkZL3K_U.json  _ILg5D34w24.json  ajnMoBttDAI.json  bE-mpnLZNh4.json  iPFVpA7s6Zs.json  kfmN0FKgsto.json  qaBB6v3u1ew.json  svOfJ-OPkEs.json  wFP7X5yOItQ.json  zDtyjmzubXc.json
(+35 files in other folders)
